--- a/pom.xml
+++ b/pom.xml
@@ -52,8 +52,9 @@
         <ehcache.version>2.10.4</ehcache.version>
         <hsqldb.version>2.3.4</hsqldb.version>
         <htmlunit.version>2.24</htmlunit.version>
-        <javassist.version>3.16.1-GA</javassist.version>
-        <javax.el.version>2.2</javax.el.version>
+        <jackson.version>2.8.8</jackson.version>
+        <javassist.version>3.19.0-GA</javassist.version>
+        <javax.el.version>3.0.0</javax.el.version>
         <javax.validation.version>1.1.0.Final</javax.validation.version>
         <jericho.version>3.3</jericho.version>
         <jetty8.version>8.1.22.v20160922</jetty8.version>
@@ -63,7 +64,7 @@
         <log4j.version>1.2.17</log4j.version>
         <openjpa.version>2.4.2</openjpa.version>
         <servlet.version>2.5</servlet.version>
-        <slf4j.version>1.7.22</slf4j.version>
+        <slf4j.version>1.7.25</slf4j.version>
         <spring.version>4.3.10.RELEASE</spring.version>
         <spring.security.version>4.2.3.RELEASE</spring.security.version>
         <tomcat7.version>7.0.75</tomcat7.version>
