--- a/services/idp-core/pom.xml
+++ b/services/idp-core/pom.xml
@@ -174,7 +174,7 @@
         <dependency>
             <groupId>com.fasterxml.jackson.jaxrs</groupId>
             <artifactId>jackson-jaxrs-json-provider</artifactId>
-            <version>2.8.6</version>
+            <version>${jackson.version}</version>
         </dependency>
         <dependency>
             <groupId>org.hsqldb</groupId>
