--- a/pom.xml
+++ b/pom.xml
@@ -98,8 +98,8 @@
     </properties>
 
     <scm>
-        <connection>scm:git:http://git-wip-us.apache.org/repos/asf/cxf-fediz.git</connection>
-        <developerConnection>scm:git:https://git-wip-us.apache.org/repos/asf/cxf-fediz.git</developerConnection>
+        <connection>scm:git:http://gitbox.apache.org/repos/asf/cxf-fediz.git</connection>
+        <developerConnection>scm:git:https://gitbox.apache.org/repos/asf/cxf-fediz.git</developerConnection>
       <tag>HEAD</tag>
   </scm>
 
