--- a/plugins/spring3/pom.xml
+++ b/plugins/spring3/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <groupId>org.apache.cxf.fediz</groupId>
         <artifactId>plugin</artifactId>
-        <version>1.4.2-SNAPSHOT</version>
+        <version>1.4.2</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>fediz-spring3</artifactId>
