--- a/pom.xml
+++ b/pom.xml
@@ -43,18 +43,17 @@
         <commons.logging.version>1.2</commons.logging.version>
         <commons.io.version>2.5</commons.io.version>
         <commons.validator.version>1.6</commons.validator.version>
-        <cxf.version>3.1.13</cxf.version>
-        <cxf.build-utils.version>3.2.0</cxf.build-utils.version>
+        <cxf.version>3.2.1-SNAPSHOT</cxf.version>
+        <cxf.build-utils.version>3.3.0</cxf.build-utils.version>
         <dbcp.version>2.1.1</dbcp.version>
         <easymock.version>3.4</easymock.version>
         <ehcache.version>2.10.4</ehcache.version>
         <hsqldb.version>2.3.4</hsqldb.version>
         <htmlunit.version>2.27</htmlunit.version>
-        <jackson.version>2.8.8</jackson.version>
+        <jackson.version>2.9.1</jackson.version>
         <javassist.version>3.19.0-GA</javassist.version>
         <javax.el.version>3.0.0</javax.el.version>
         <javax.validation.version>1.1.0.Final</javax.validation.version>
-        <jericho.version>3.3</jericho.version>
         <jetty9.version>9.3.9.v20160517</jetty9.version>
         <junit.version>4.12</junit.version>
         <kerby.version>1.0.1</kerby.version>
@@ -65,7 +64,7 @@
         <spring.version>4.3.10.RELEASE</spring.version>
         <spring.security.version>4.2.3.RELEASE</spring.security.version>
         <tomcat8.version>8.5.20</tomcat8.version>
-        <wss4j.version>2.1.11</wss4j.version>
+        <wss4j.version>2.2.0</wss4j.version>
 
         <tomcat.url>http://localhost:8080/manager/text</tomcat.url>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
