--- a/plugins/jetty9/pom.xml
+++ b/plugins/jetty9/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <groupId>org.apache.cxf.fediz</groupId>
         <artifactId>plugin</artifactId>
-        <version>1.4.3-SNAPSHOT</version>
+        <version>1.4.3</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>fediz-jetty9</artifactId>
