--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
     <parent>
         <groupId>org.apache</groupId>
         <artifactId>apache</artifactId>
-        <version>23</version>
+        <version>24</version>
     </parent>
 
     <prerequisites>
@@ -93,6 +93,7 @@
         <fediz.downloadSources>true</fediz.downloadSources>
 
         <fediz.resources.base.path />
+        <project.build.outputTimestamp>1</project.build.outputTimestamp>
     </properties>
 
     <scm>
