--- a/pom.xml
+++ b/pom.xml
@@ -99,8 +99,8 @@
     <scm>
         <connection>scm:git:https://gitbox.apache.org/repos/asf/cxf-fediz.git</connection>
         <developerConnection>scm:git:https://gitbox.apache.org/repos/asf/cxf-fediz.git</developerConnection>
-      <tag>HEAD</tag>
-  </scm>
+        <tag>HEAD</tag>
+    </scm>
 
     <issueManagement>
         <system>jira</system>
@@ -233,11 +233,10 @@
             </properties>
         </developer>
     </developers>
-   
 
     <ciManagement>
-        <system>Hudson</system>
-        <url>https://builds.apache.org/view/A-D/view/CXF/job/CXF-Fediz/</url>
+        <system>Jenkins</system>
+        <url>https://ci-builds.apache.org/job/CXF/job/CXF-Fediz/</url>
         <notifiers>
             <notifier>
                 <type>mail</type>
