--- a/pom.xml
+++ b/pom.xml
@@ -50,13 +50,14 @@
         <jcache.version>1.1.1</jcache.version>
         <hsqldb.version>2.5.2</hsqldb.version>
         <htmlunit.version>2.52.0</htmlunit.version>
-        <jackson.version>2.11.4</jackson.version>
+        <jackson.version>2.13.2</jackson.version>
+        <jaxb.runtime.version>2.3.5</jaxb.runtime.version>
         <jaxb.version>2.3.3</jaxb.version>
         <jetty9.version>9.4.46.v20220331</jetty9.version>
         <junit.version>4.13.2</junit.version>
         <kerby.version>2.0.1</kerby.version>
         <log4j.version>2.17.2</log4j.version>
-        <openjpa.version>3.2.0</openjpa.version>
+        <openjpa.version>3.2.2</openjpa.version>
         <servlet.version>3.1.0</servlet.version>
         <slf4j.version>1.7.36</slf4j.version>
         <spring.version>5.3.18</spring.version>
@@ -320,7 +321,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-javadoc-plugin</artifactId>
-                    <version>3.0.1</version>
+                    <version>3.4.0</version>
                     <configuration>
                         <attach>true</attach>
                         <source>${jdk.version}</source>
@@ -340,7 +341,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
-                    <version>3.8.1</version>
+                    <version>3.10.1</version>
                     <configuration>
                         <source>${jdk.version}</source>
                         <target>${jdk.version}</target>
@@ -365,7 +366,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-resources-plugin</artifactId>
-                    <version>3.1.0</version>
+                    <version>3.2.0</version>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -375,19 +376,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-dependency-plugin</artifactId>
-                    <version>3.2.0</version>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-shade-plugin</artifactId>
-                    <version>3.2.4</version>
-                    <dependencies>
-                        <dependency>
-                            <groupId>org.apache.cxf.build-utils</groupId>
-                            <artifactId>cxf-buildtools</artifactId>
-                            <version>${cxf.build-utils.version}</version>
-                        </dependency>
-                    </dependencies>
+                    <version>3.3.0</version>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -657,7 +646,7 @@
                         <plugin>
                             <groupId>org.apache.maven.plugins</groupId>
                             <artifactId>maven-compiler-plugin</artifactId>
-                            <version>3.8.1</version>
+                            <version>3.10.1</version>
                             <configuration>
                                 <source>${jdk.version}</source>
                                 <target>${jdk.version}</target>
@@ -756,7 +745,7 @@
                 <dependency>
                     <groupId>org.glassfish.jaxb</groupId>
                     <artifactId>jaxb-runtime</artifactId>
-                    <version>${jaxb.version}</version>
+                    <version>${jaxb.runtime.version}</version>
                 </dependency>
                 <dependency>
                     <groupId>jakarta.annotation</groupId>
@@ -766,7 +755,7 @@
                 <dependency>
                     <groupId>jakarta.xml.ws</groupId>
                     <artifactId>jakarta.xml.ws-api</artifactId>
-                    <version>2.3.2</version>
+                    <version>2.3.3</version>
                 </dependency>
             </dependencies>
         </profile>
